OpenVi 7.0.4 -> OpenVi 7.0.5: Thu Jan 27 11:00:46 2022
	+ No verbose build by default; set variables V (or DEBUG) to enable
	+ No LTO and LGC by default; set variables LTO and/or LGC to enable
	+ Don't attempt linking with libjemalloc or libmtmalloc by default
	+ Clean-up headers to speed compilation time and decrease binary size
	+ Import and adapt OpenBSD Berkeley DB from OpenBSD 7-current libc
	+ Remove the unused "maintainer-clean" target from GNUmakefile
	+ Build against the newly bundled OpenBSD Berkeley DB by default;
	  the imperfect Berkeley DB 3/4/5 support will remain available

OpenVi 7.0.3 -> OpenVi 7.0.4: Wed Jan 26 13:09:45 2022
	+ New feature: "set visibletab" (abbrev "set vt") which toggles
	  displaying tabs visibly while editing, useful for Makefiles, etc
	+ Decrease the width of the line-number column by one row
	+ Increase the length of the divider decoration string (by 2x)
	+ Improve the GNUmakefile to avoid remaking any non-stale targets
	+ Portably seed the standard random number generator

OpenVi 7.0.2 -> OpenVi 7.0.3: Wed Jan 26 08:31:28 2022
	+ GNUmakefile "install" targets now install documentation (man pages)
	+ Remove 'docs/internals/cscope.NOTES' and documentation references
	+ General GNUmakefile, portability, and code readability improvements
	+ Relicense new contributions under the same 3-clause BSD license
	  used by the overall project and update LICENSE file text
	+ Remove unused headers and legacy documentation from the source tree
	+ Add standalone "strip" target to GNUmakefile; strips uninstalled binary
	+ Set visible tab character to '~' and expose option in GNUmakefile
	+ Installed binaries are now prefixed with 'o' (e.g. 'ovi') by default
	+ Explicitly invoke the POSIX-compliant version of the awk utility
	+ Clarify (and simplify) GNUmakefile and build configuration
	+ Update ChangeLog and docs for consistency, fix spelling and other typos
	+ Update LICENSE text

OpenVi 7.0.1 -> OpenVi 7.0.2: Tue Jan 25 13:44:48 2022