@@ -480,7 +480,7 @@ T}
 .\" \fIEdit\fP is designed to
 .\" prevent accidental use of
 .\" the open command.
-.\" T}	
+.\" T}
 .SP
 \fBpreserve	pre	T{
 Saves a copy of the current buffer contents as though the system had
@@ -668,7 +668,7 @@ or, if \fIcount\fR is specified,
 prints that number of lines.
 Variants of the \fIz\fR command
 are described in the manual.
-T}	
+T}
 .SP
 \fB!\fIcommand		T{
 .fi
@@ -736,7 +736,7 @@ T}
 \fB?\fIpattern\fB?		T{
 Searches in the reverse direction
 for \fIpattern\fP.
-T}	
+T}
 .SP
 \fB??		T{
 Repeats the most recent search,
