@@ -333,7 +333,7 @@ ins_ch:			if (LF_ISSET(TXT_BEAUTIFY) && iscntrl(ev.e_c) &&
 
 done:	return (rval);
 
-err:	
+err:
 alloc_err:
 	return (1);
 }
