@@ -135,7 +135,7 @@ v_exaddr(SCR *sp, VICMD *vp, dir_t dir)
 	 */
 	if (!KEYS_WAITING(sp))
 		F_SET(&gp->excmd, E_SEARCH_WMSG);
-		
+
 	/* Save the current line/column. */
 	s_lno = sp->lno;
 	s_cno = sp->cno;
@@ -167,7 +167,7 @@ v_exaddr(SCR *sp, VICMD *vp, dir_t dir)
 	cmdp = &gp->excmd;
 	if (ex_range(sp, cmdp, &err))
 		return (1);
-	
+
 	/*
 	 * Remember where any remaining command information is, and clean
 	 * up the fake ex command.
@@ -202,7 +202,7 @@ v_exaddr(SCR *sp, VICMD *vp, dir_t dir)
 	 */
 	if (ISMOTION(vp))
 		return (v_correct(sp, vp, F_ISSET(cmdp, E_DELTA)));
-		
+
 	/*
 	 * !!!
 	 * Historically, if it wasn't a motion command, a delta in the search
@@ -350,7 +350,7 @@ v_search(SCR *sp, VICMD *vp, char *ptrn, size_t plen, u_int flags, dir_t dir)
 	 */
 	if (!KEYS_WAITING(sp))
 		LF_SET(SEARCH_WMSG);
-		
+
 	switch (dir) {
 	case BACKWARD:
 		if (b_search(sp,
